[gd_scene load_steps=13 format=2]

[ext_resource path="res://Map Editor/Map Editor Theme.tres" type="Theme" id=1]
[ext_resource path="res://Map Editor/Brush/circle.png" type="Texture" id=2]
[ext_resource path="res://Map Editor/Brush/circlePressed.png" type="Texture" id=3]
[ext_resource path="res://Map Editor/Brush/squarePressed.png" type="Texture" id=4]
[ext_resource path="res://Map Editor/Brush/diamondPressed.png" type="Texture" id=5]
[ext_resource path="res://Map Editor/Brush/square.png" type="Texture" id=6]
[ext_resource path="res://Map Editor/Brush/diamond.png" type="Texture" id=7]
[ext_resource path="res://Map Editor/Brush/Brush.gd" type="Script" id=8]
[ext_resource path="res://Map Editor/Brush/UnevenSpinBox.gd" type="Script" id=9]
[ext_resource path="res://Map Editor/Brush/fill.png" type="Texture" id=10]
[ext_resource path="res://Map Editor/Brush/fillPressed.png" type="Texture" id=11]

[sub_resource type="ButtonGroup" id=1]

[node name="Brush" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1470.0
margin_bottom = -880.0
theme = ExtResource( 1 )
script = ExtResource( 8 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 443.0
margin_bottom = 193.0

[node name="Size" type="HBoxContainer" parent="VBox"]
margin_right = 436.0
margin_bottom = 34.0
alignment = 1

[node name="Label" type="Label" parent="VBox/Size"]
margin_left = 121.0
margin_top = 5.0
margin_right = 225.0
margin_bottom = 29.0
text = "Brush Size: "

[node name="SpinBox" type="SpinBox" parent="VBox/Size"]
margin_left = 229.0
margin_right = 315.0
margin_bottom = 34.0
min_value = 1.0
max_value = 99.0
value = 1.0
rounded = true
align = 2
script = ExtResource( 9 )

[node name="Label" type="Label" parent="VBox"]
margin_top = 38.0
margin_right = 436.0
margin_bottom = 62.0
text = "Brush Shape:"
align = 1

[node name="Shape" type="HBoxContainer" parent="VBox"]
margin_top = 66.0
margin_right = 436.0
margin_bottom = 116.0
alignment = 1

[node name="Circle" type="TextureButton" parent="VBox/Shape"]
margin_left = 112.0
margin_right = 162.0
margin_bottom = 50.0
toggle_mode = true
pressed = true
group = SubResource( 1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Square" type="TextureButton" parent="VBox/Shape"]
margin_left = 166.0
margin_right = 216.0
margin_bottom = 50.0
toggle_mode = true
group = SubResource( 1 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )

[node name="Diamond" type="TextureButton" parent="VBox/Shape"]
margin_left = 220.0
margin_right = 270.0
margin_bottom = 50.0
toggle_mode = true
group = SubResource( 1 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )

[node name="Fill" type="TextureButton" parent="VBox/Shape"]
margin_left = 274.0
margin_right = 324.0
margin_bottom = 50.0
toggle_mode = true
group = SubResource( 1 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[connection signal="value_changed" from="VBox/Size/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBox/Shape/Circle" to="." method="_on_Circle_pressed"]
[connection signal="pressed" from="VBox/Shape/Square" to="." method="_on_Square_pressed"]
[connection signal="pressed" from="VBox/Shape/Diamond" to="." method="_on_Diamond_pressed"]
[connection signal="pressed" from="VBox/Shape/Fill" to="." method="_on_Fill_pressed"]
